fixed conflict -wrap class

--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -21,7 +21,7 @@ a {
 }
 
 
-.wrap {
+.wrap-header {
 	max-width: 1440px;
   	/* Cambio de posición NAVBAR*/
   	margin-left: 1em;
